fix: change github url

--- a/src/components/CommunicationChannels.astro
+++ b/src/components/CommunicationChannels.astro
@@ -85,7 +85,7 @@ const mailtoLink = getMailtoLink(email)
 				</a>
 				
 				<a 
-					href="https://github.com/IvanGonzalezCavero"
+					href="https://github.com/ivan-cavero"
 					target="_blank"
 					rel="noopener noreferrer"
 					class="flex items-center gap-2 p-3 !bg-black/30 hover:!bg-red-500/20 transition-colors w-full group"
