feat: new panel stats with api

--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -8,22 +8,28 @@ import ProjectsShowcase from '../../components/ProjectsShowcase.astro';
 import LanguageSelector from '../../components/LanguageSelector.astro';
 import DataVisualizer from '../../components/DataVisualizer.astro';
 import { myFade } from '../../components/Transitions.astro';
+import StatsPanel from '../../components/StatsPanel.astro';
 
 const locale = 'es';
 ---
-<Layout title="Ivan González - Control de Misión" description="Desarrollador Full Stack especializado en React, Vue y Node.js. ¡Explora mis proyectos y ponte en contacto!">
+<Layout title="Ivan Cavero - Control de Misión" description="Desarrollador Full Stack especializado en React, Vue y Node.js. ¡Explora mis proyectos y ponte en contacto!">
   <main class="min-h-screen w-full bg-[#000813]" transition:animate={myFade}>
     <div class="mission-container">
       <div class="grid grid-cols-2 lg:grid-cols-3 gap-4 col-span-full">
         <CommanderProfile locale={locale} />
         <CommunicationChannels locale={locale} />
       </div>
-      <div class="grid grid-cols-1 xl:grid-cols-2 gap-4 col-span-full">
-        <TechnicalSpecs locale={locale} />
-        <DataVisualizer locale={locale} />
+      <div class="grid grid-cols-1 2xl:grid-cols-3 gap-4 col-span-full">
+        <div class="2xl:col-span-2">
+          <TechnicalSpecs locale={locale} />
+        </div>
+        <div class="2xl:col-span-1">
+          <DataVisualizer locale={locale} />
+        </div>
       </div>
       <ProjectsShowcase locale={locale} />
       <MissionLog locale={locale} />
+      <StatsPanel locale={locale} />
     </div>
     <LanguageSelector />
   </main>
